@@ -28,7 +28,7 @@ plugins {
 }
 
 group = "de.tum.in.www1.artemis"
-version = "4.11.2"
+version = "4.11.3"
 description = "Interactive Learning with Individual Feedback"
 
 sourceCompatibility=15
@@ -89,31 +89,9 @@ test {
     jvmArgs "--illegal-access=warn"
 }
 
-task integrationTest(type: Test) {
-    useJUnitPlatform()
-    description = "Execute integration tests."
-    group = "verification"
-    include "**/*IT*", "**/*IntTest*"
-
-    testLogging {
-        events "FAILED", "SKIPPED"
-    }
-
-    maxHeapSize = "1024m"
-    jvmArgs "-XX:MaxPermSize=512m --illegal-access=warn"
-    reports.html.enabled = false
-}
-
-check.dependsOn integrationTest
-
 task testReport(type: TestReport) {
     destinationDir = file("$buildDir/reports/tests")
     reportOn test
-}
-
-task integrationTestReport(type: TestReport) {
-    destinationDir = file("$buildDir/reports/tests")
-    reportOn integrationTest
 }
 
 jacoco {
@@ -218,7 +196,7 @@ dependencies {
     implementation "javax.transaction:javax.transaction-api:1.3"
     implementation "org.hibernate:hibernate-jcache:${hibernate_version}"
     implementation "org.hibernate:hibernate-entitymanager:${hibernate_version}"
-    implementation "org.hibernate.validator:hibernate-validator:6.2.0.Final"
+    implementation "org.hibernate.validator:hibernate-validator:7.0.1.Final"
     implementation "org.liquibase:liquibase-core:4.3.2"
     implementation "org.springframework.boot:spring-boot-loader-tools:${spring_boot_version}"
     implementation "org.springframework.boot:spring-boot-starter-mail:${spring_boot_version}"
@@ -235,13 +213,13 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${spring_boot_version}"
 
     implementation "org.springframework.ldap:spring-ldap-core:2.3.3.RELEASE"
-    implementation "org.springframework.data:spring-data-ldap:2.4.6"
+    implementation "org.springframework.data:spring-data-ldap:2.4.7"
 
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.0.2"
     implementation "org.springframework.cloud:spring-cloud-starter-config:3.0.3"
     implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.13.RELEASE"
 
-    implementation "io.netty:netty-all:4.1.62.Final"
+    implementation "io.netty:netty-all:4.1.63.Final"
     implementation "io.projectreactor.netty:reactor-netty:1.0.5"
     implementation "org.springframework:spring-messaging:5.3.5"
 
@@ -317,16 +295,6 @@ tasks.withType(Test) {
         showCauses true
         showStackTraces true
 
-        // set options for log level DEBUG and INFO
-        debug {
-            events TestLogEvent.STARTED,
-                TestLogEvent.FAILED,
-                TestLogEvent.PASSED,
-                TestLogEvent.SKIPPED,
-                TestLogEvent.STANDARD_ERROR,
-                TestLogEvent.STANDARD_OUT
-            exceptionFormat TestExceptionFormat.FULL
-        }
         info.events = debug.events
         info.exceptionFormat = debug.exceptionFormat
 
@@ -342,7 +310,7 @@ tasks.withType(Test) {
 }
 
 wrapper {
-    gradleVersion = "7.0-rc-1"
+    gradleVersion = "7.0-rc-2"
 }
 
 task stage(dependsOn: "bootWar") {
